fix the error of file downloading on iphone

--- a/FRONTEND/src/components/SingleInsightPage/SingleInsightPage.module.css
+++ b/FRONTEND/src/components/SingleInsightPage/SingleInsightPage.module.css
@@ -166,7 +166,9 @@
 }
 
 
-
+.Block_Content li a{
+  font-weight: 700;
+}
    .Block_Content {
     padding-left: 20px;
     padding-right: 20px;
